--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 
 <project>
 
-<modelversion>4.1.0</modelversion>
+<modelversion>4.0.0</modelversion>
 
 <groupId>com.amazon</groupId>
 <artifactId>amazon</artifactId>
 <packaging>war</packaging>
 
-<version>1.1-SNAPSHOT</version>
+<version>1.0-SNAPSHOT</version>
 
 <name>amazon Maven webapp</name>
 <url>http://maven.apache.org</url>
@@ -16,13 +16,13 @@
   <dependency>
     <groupId>junit</grupId>
     <artifactId>junit</artifactId>
-    <version>3.8.2</version>
+    <version>3.8.1</version>
     <scope>test</scope>
   </dependency>
 </dependencies>
 
 <build>
-  <finalName>PA1</finalName>
+  <finalName>Pavan</finalName>
 </build>
 
 
